# A2Perf

./: .buildinfo  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  CNAME  README.md  circuit_training_environment.yml  index.html  launch_requirements.txt  objects.inv  pyproject.toml  quadruped_locomotion_environment.yml  requirements-dev.txt  requirements.txt  searchindex.js  setup.py  web_navigation_environment.yml  xm_launch.py
.devcontainer/: devcontainer.json
.github/workflows/: build-docs-dev.yml  build-docs.yml  build-publish-test.yml  build-publish.yml  pre-commit.yml  publish-to-test-pypi.yml
README/: index.html
_downloads/c9917c8b7d1fd86fe1a3322e4248607c/: generalization.gin
a2perf/: constants.py
a2perf/analysis/: __init__.py  evaluation.py  expertise.py  metrics.py  metrics_lib.py  reliability.py  results.py  system.py
a2perf/data/: combine.py  generate.py
a2perf/data/minari/: data_utils.py  tf_utils.py
a2perf/data/minari_dataset/: data_utils.py  tf_utils.py
a2perf/datasets/quadruped_locomotion/: generate_dataset.py
a2perf/datasets/web_navigation/: generate_dataset.py
a2perf/domains/tfa/: gym_wrapper.py  suite_gym.py  utils.py
a2perf/domains/utils/: suite_gym.py
a2perf/launch/: docker_utils.py  entrypoint.py
a2perf/metrics/profiler/: base_profiler.py  inference_profiler.py  memory_profiler.py  training_profiler.py
a2perf/submission/: main_submission.py  submission_util.py
a2perf/tutorials/: QuadrupedLocomotion.ipynb
a2perf/tutorials/example_submission/: inference.py  main.py  train.py
content/basic_usage/: index.html
content/circuit_training/: CircuitTraining-Ariane-v0.ipynb  CircuitTraining-ToyMacroStdcell-v0.ipynb  index.html
content/circuit_training/CircuitTraining-Ariane-v0/: index.html
content/circuit_training/CircuitTraining-ToyMacro-v0/: index.html
content/circuit_training/CircuitTraining-ToyMacroStdcell-v0/: index.html
content/publications/: index.html
content/quadruped_locomotion/: QuadrupedLocomotion-DogPace-v0.ipynb  QuadrupedLocomotion-DogSpin-v0.ipynb  QuadrupedLocomotion-DogTrot-v0.ipynb  index.html
content/quadruped_locomotion/QuadrupedLocomotion-DogPace-v0/: index.html
content/quadruped_locomotion/QuadrupedLocomotion-DogSpin-v0/: index.html
content/quadruped_locomotion/QuadrupedLocomotion-DogTrot-v0/: index.html
content/tutorials/: add_domain.ipynb  generalization.ipynb  training.ipynb
content/web_navigation/: WebNavigation-Difficulty-01-v0.ipynb  index.html
docker/: create_singularity_image.sh
docs/: README.md  conf.py  index.md  release_notes.md  requirements.txt
docs/_scripts/: ipynb_to_gallery.py
docs/content/: CircuitTraining-v0.ipynb  basic_usage.md  publications.md
genindex/: index.html
launch/: docker_utils.py  entrypoint.py  quadruped_locomotion.Dockerfile  web_navigation.Dockerfile  xm_launch.py  xm_launch_circuit_training.py  xm_launch_ct_xgcp.py  xm_launch_quadruped_locomotion.py  xm_launch_quadruped_locomotion_training.py  xm_launch_web_nav.py  xm_launch_web_navigation.py
launch/entrypoints/: quadruped_locomotion.py
launch/gcp/: launch_helper.py  start_ssh_tunnels.py
media/: main_figure.html
release_notes/: index.html
rl_perf/docker/: create_singularity_image.sh
rl_perf/domains/: __init__.py
rl_perf/profiler/: base_profiler.py
rl_perf/submission/: main_submission.py  submission.py  submission_util.py
rlperf_benchmark_submission/: train.py
search/: index.html
tutorials/: QuadrupedLocomotion.ipynb  WebNav.ipynb  beginners_guide.ipynb
viz/: combine_metrics.py  metrics.ipynb  metrics.py  system.py
viz/analysis/: metrics.ipynb
viz/web_nav/: designs.py
viz/web_navigation/: designs.py
(+156 files in other folders)
